--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,7 @@ services:
     ports:
       - "4318:4318"
       - "4317:4317"
+      - "8889:8889"
     volumes:
       - type: bind 
         source: ./OtelCollector/collector-config.yaml
@@ -18,7 +19,12 @@ services:
     volumes:
       - type: bind
         source: ./Prometheus/Database
-        target: /opt/bitnami/prometheus/data
+        target: /etc/prometheus/data
       - type: bind
         source: ./Prometheus/prometheus.yml
-        target: /opt/bitnami/prometheus/conf/prometheus.yml
+        target: /etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
