--- a/OtelCollector/collector-config.yaml
+++ b/OtelCollector/collector-config.yaml
@@ -5,17 +5,27 @@ receivers:
         endpoint: 0.0.0.0:4317
       http:
         endpoint: 0.0.0.0:4318
+
 exporters:
   debug:
     verbosity: detailed
+  otlphttp/logs:
+    endpoint: ""
+    tls:
+      insecure: true
+
+  prometheus:
+    endpoint: 0.0.0.0:8889
+    namespace: default
+
 service:
   pipelines:
-    traces:
-      receivers: [otlp]
-      exporters: [debug]
+    # traces:
+    #   receivers: [otlp]
+    #   exporters: [debug]
     metrics:
       receivers: [otlp]
-      exporters: [debug]
-    logs:
-      receivers: [otlp]
-      exporters: [debug]
+      exporters: [debug, prometheus]
+    # logs:
+    #   receivers: [otlp]
+    #   exporters: [debug]
