--- a/Prometheus/prometheus.yml
+++ b/Prometheus/prometheus.yml
@@ -34,5 +34,5 @@ scrape_configs:
     # scheme defaults to 'http'.
 
     static_configs:
-      - targets: ["localhost:8889"]
+      - targets: ["otel-collector:8889"]
 
