--- a/OtelCollector/collector-config.yaml
+++ b/OtelCollector/collector-config.yaml
@@ -9,8 +9,9 @@ receivers:
 exporters:
   debug:
     verbosity: detailed
+
   otlphttp/logs:
-    endpoint: ""
+    endpoint: "http://loki:3100/otlp"
     tls:
       insecure: true
 
@@ -26,6 +27,6 @@ service:
     metrics:
       receivers: [otlp]
       exporters: [debug, prometheus]
-    # logs:
-    #   receivers: [otlp]
-    #   exporters: [debug]
+    logs:
+      receivers: [otlp]
+      exporters: [debug, otlphttp/logs]
