--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@
 
 services:
   otel-collector:
-    image: otel/opentelemetry-collector
+    image: otel/opentelemetry-collector-contrib-dev
     ports:
       - "4318:4318"
       - "4317:4317"
@@ -10,7 +10,7 @@ services:
     volumes:
       - type: bind 
         source: ./OtelCollector/collector-config.yaml
-        target: /etc/otelcol/config.yaml
+        target: /etc/otel/config.yaml
 
   prometheus:
     image: prom/prometheus
@@ -45,3 +45,13 @@ services:
     image: grafana/grafana
     ports:
       - "3000:3000"
+
+  tempo:
+    image: grafana/tempo
+    command: [ "-config.file=/etc/tempo.yaml" ]
+    volumes:
+      - type: bind
+        source: ./Tempo/tempo.yaml
+        target: /etc/tempo.yaml
+    ports:
+      - "3200:3200"   # tempo
