Alterado forma que é definido o ip dentro do tempo.yaml

--- a/Tempo/tempo.yaml
+++ b/Tempo/tempo.yaml
@@ -24,8 +24,10 @@ distributor:
     zipkin:
     otlp:
       protocols:
-        http:
-        grpc:
+        http: 
+          endpoint: "tempo:4318"
+        grpc: 
+          endpoint: "tempo:4317"
     opencensus:
 
 ingester:
